# dynamo

./: .coderabbit.yaml  .coveragerc  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lycheeignore  .pre-commit-config.yaml  .test-pat-auth  ACTIVE_PLAN.md  ADAPTIVE_REQUEST_PLANE_GUIDE.md  AGENTS.md  ATTRIBUTIONS-Go.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS-container-frontend.md  ATTRIBUTIONS-container-sglang-runtime.md  ATTRIBUTIONS-container-tensorrtllm-runtime.md  ATTRIBUTIONS-container-tensorrtllm-runtime.txt  ATTRIBUTIONS.md  Agents.md  BATCH_IMPLEMENTATION_SUMMARY.md  BIS-README.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEOWNERS  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.lock.bak  Cargo.toml  DCO.md  DEBUG_GUIDE.md  DEP-XXXX_ Dynamo Planner Plugin Architecture.docx  DEP-XXXX_Dynamo_Planner_Plugin_Architecture_zh.md  DEP-XXXX_HANDOFF.md  DEP-XXXX_Implementation_Breakdown_zh.md  DEP-XXXX_PR1_Detailed_zh.md  DEP-XXXX_PR2_Detailed_zh.md  (+326 more)
aisimulate/: README.md  pyproject.toml
aisimulate/examples/spica/: README.md
aisimulate/scripts/: check_packaging.py
aisimulate/spica/: __init__.py  __main__.py  _quiet.py  config.py  deploy.py  evaluator.py  kv_load.py  load_predictor_sweep.py  model_hw.py  parallel_enum.py  parallel_projection.py  planner.py  sample.py  sampler.py  score.py  search.py  search_space.py
aisimulate/tests/: conftest.py
aisimulate/tests/spica/: conftest.py  test_cli.py  test_config.py  test_deploy.py  test_evaluator.py  test_kv_estimate.py  test_kv_load.py  test_load_predictor_sweep.py  test_load_predictor_sweep_integration.py  test_model_hw.py  test_packaging.py  test_parallel_enum.py  test_parallel_projection.py  (+8 more)
benchmarks/: README.md  benchmark.sh  e2e_diffusion_bench.py  fast_pool_bench.py  fast_pool_sweep.py  image_postprocessing_bench.py  mocker_request_enrich_trace.py  nginx.sh  ping.sh  plot_prefix_ratio_comparison.py  prefix_ratio_benchmark.py  profile_endpoint.py  pyproject.toml  run_engines.sh  run_fast_pool_bench.sh  run_router.sh  video_postprocessing_bench.py  vllm_config.json
benchmarks/agent_trace/: README.md  convert_to_perfetto.py  validate_convert_to_perfetto.py
benchmarks/burstgpt_loadgen/: convert.py
benchmarks/coding/: README.md  claude_discovery.py  claude_parser.py  common.py  export_claude_trace.py  hashing.py  models.py  mooncake.py
benchmarks/cuda_custom_storage/: Makefile  README.md  cuda_checkpoint_compat.h  roundtrip.cpp
benchmarks/data_generator/: README.md  example.py  hasher.py  prefix_analyzer.py  synthesizer.py
benchmarks/exgentic_trace/: README.md  convert_to_mooncake.py
benchmarks/frontend/: README.md
benchmarks/glm52-nscale/: .gitignore  README.md  RUNBOOK.md  campaign.env  campaign.local.env.example  kustomization.yaml  worklog.md
benchmarks/gms_cuda_init_ab/: Dockerfile  README.md  allocation-sizes.json  build-driver-loader.sh  build-images.sh  cache-helper.yaml  gms-fadvise-exact.py  gms-host-sampler.sh  run-variant.sh  run-vmm-slab-probe.sh  validate-loader-profile.py  validate-server-profile.py  vmm-probe-pod.yaml  vmm-slab-probe.py
benchmarks/gpu_memory_service/: phase_a_microbench.py
benchmarks/incluster/: README.md  benchmark_job.yaml
benchmarks/llm/: README.md  compare_results.py  perf.sh  plot_pareto.py  sglang_vs_dynamo_sglang.sh
benchmarks/mocker/: README.md  bench_aic_concurrency.py  bench_aic_rust_callback.py  pareto_comparison.py
benchmarks/multimodal/: REPRO.md  bench_8fe_kv.sh  bench_8fe_kv_multiturn.sh  benchmark_sweep.sh  launch_8fe_8w_kv.sh  lb_proxy.py  local_media_server.py
benchmarks/nat_trace/: all_requests_profiler_traces_mooncake.jsonl  convert.py  convert_telemetry.py
benchmarks/nixl/: nixl-benchmark-deployment.yaml
benchmarks/prefix_data_generator/: README.md  synthesizer.py
benchmarks/profiler/: README.md  download_pvc_results.py  inject_disagg_config.py  profile_endpoint.py  profile_sla.py
benchmarks/request_trace/: README.md  convert_to_perfetto.py  validate_convert_to_perfetto.py
benchmarks/router/: README.md  VALKEY_ROUTER_HANDOFF.md  agent_benchmark.py  common.py  global_router_priority_benchmark.py  mock_server.py  ping.sh  plot_prefix_ratio_comparison.py  prefix_ratio_benchmark.py  real_data_benchmark.py  real_data_priority_benchmark.py  run_engines.sh  test_valkey_k8s_sweep.py  test_valkey_k8s_sweep_aiperf.py  test_valkey_k8s_sweep_network.py  test_valkey_k8s_sweep_runtime.py  test_valkey_module_saturation.py  test_valkey_router_aiperf.py  tokenizer_cache_agentic.py  valkey_frontend_scale.py  valkey_k8s_sweep_test_support.py  valkey_module_saturation.py  valkey_router_aiperf.py  valkey_weka.py  valkey_weka_ab.py  valkey_weka_report.py
benchmarks/rust/: Cargo.toml
benchmarks/sin_load_generator/: sin_synth.py
benchmarks/tokenizer-comparison/: Cargo.toml  README.md
benchmarks/unified_backend/: README.md  bench_bridge.py  workload.py
benchmarks/utils/: aiperf.py  benchmark.py  genai.py  plot.py  vanilla_client.py  workflow.py
components/profiler/: README.md  pyproject.toml  verify_packaging.py
examples/aotinductor-rs-backend/: Cargo.toml  README.md
launch/dynamo-ctl/: Cargo.toml  README.md
launch/dynamo-run/: Cargo.toml  README.md
launch/dynamo-tui/: Cargo.toml  DOCKER.md  Dockerfile.dev  README.md  docker-build.sh  docker-run.sh  docker-test.sh
launch/zmq-broker/: Cargo.toml
lib/agents/: CLAUDE.md  Cargo.toml
lib/async-openai-macros/: Cargo.toml
lib/compass/: Cargo.toml
lib/device/: Cargo.toml
lib/discovery/: Cargo.toml
lib/gpu-memory-service/: Cargo.toml
lib/http-server/: Cargo.toml
lib/identity/: Cargo.toml
lib/kvbm/: Cargo.toml  README.md  pyproject.toml
lib/kvbm-bench/: Cargo.toml
lib/kvbm-connector/: CONTRACT.md  Cargo.toml
lib/kvbm-control-protocol/: Cargo.toml
lib/kvbm-disagg-protocol/: Cargo.toml
lib/kvbm-engine/: CLAUDE.md  Cargo.toml
lib/kvbm-hub/: Cargo.toml
lib/kvbm-kernels/: CLAUDE.md  Cargo.toml  README.md  build.rs  pyproject.toml  run.sh
lib/kvbm-physical/: Cargo.toml  README.md
lib/kvbm-registry/: Cargo.toml
(+116021 files in other folders)
