# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
authors         = [ { name = "NVIDIA CORPORATION & AFFILIATES" } ]
description     = "Data generator library for LLM benchmarks"
license         = { text = "Apache-2.0" }
name            = "data-generator"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "aiconfigurator==0.2.0",
    "networkx",
    "pandas",
    "pydantic>=2",
    "pytest-mypy",
    "tabulate",
    "transformers",
    "types-tabulate",
]

[project.scripts]
datagen = "prefix_data_generator.cli:main"

[project.urls]
Repository = "https://github.com/ai-dynamo/dynamo.git"

[build-system]
build-backend = "setuptools.build_meta"
requires      = [ "setuptools>=42", "wheel" ]

[tool.uv]
override-dependencies = [ "gradio==5.47.1" ]

[tool.setuptools]
packages = [ "prefix_data_generator" ]

[tool.setuptools.package-data]
prefix_data_generator = [ "**/*.py" ]

[tool.mypy]
check_untyped_defs     = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--ignore-glob=*_inc.py",
    "--ignore-glob=*model.py",
    "--ignore-glob=deploy/cloud/api-store/*",
    "--mypy",                                 # This flag enables mypy type checking during pytest runs
    "--showlocals",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
