[package]
name = "dynamo-rust-benchmarks"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# repo
dynamo-llm = { workspace = true }
dynamo-runtime = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
