# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ai-dynamo-profiler"
version = "1.3.0"
description = "Profiling tools for NVIDIA Dynamo"
readme = "README.md"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "ai-dynamo==1.3.0",
    "aiconfigurator==0.10.0",
    "aiconfigurator-core==0.10.0",
    "aiperf==0.10.0",
    "aiofiles<=25.1.0",
    "httpx>=0.28.0,<1.0",
    "huggingface-hub>=0.34.0,<2.0",
    "kubernetes-asyncio==32.0.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.0,<3.0",
    "pandas>=2.2.0,<3.0",
    "pydantic>=2.11.4,<2.13",
    "pyyaml>=6.0",
    "scipy>=1.14.0,<2.0",
    "transformers>=4.56.0",
]

[project.urls]
Repository = "https://github.com/ai-dynamo/dynamo.git"

[project.scripts]
dynamo-profiler = "dynamo.profiler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamo"]
