# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-run"
version = "0.5.1"
edition = "2024"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
homepage = "https://github.com/ai-dynamo/dynamo"
license = "Apache-2.0"
repository = "https://github.com/ai-dynamo/dynamo.git"
description = "Dynamo Run CLI"

[features]
# Build with `--no-default-features` to disable these defaults
default = ["mistralrs", "llamacpp"]
mistralrs = ["dep:dynamo-engine-mistralrs"]
llamacpp = ["dep:dynamo-engine-llamacpp"]

cuda = ["dynamo-engine-llamacpp/cuda", "dynamo-engine-mistralrs/cuda"]
metal = ["dynamo-engine-llamacpp/metal", "dynamo-engine-mistralrs/metal"]
vulkan = ["dynamo-engine-llamacpp/vulkan"]
openmp = ["dynamo-engine-llamacpp/openmp"]

tokio-console = ["dynamo-runtime/tokio-console"]

[dependencies]
dynamo-llm = { path = "../../lib/llm", version = "0.5.1" }
dynamo-runtime = { path = "../../lib/runtime", version = "0.5.1" }

dynamo-engine-llamacpp = { path = "../../lib/engines/llamacpp", optional = true }
dynamo-engine-mistralrs = { path = "../../lib/engines/mistralrs", optional = true }

anyhow = { version = "1" }
dynamo-async-openai = { path = "../../lib/async-openai", version = "0.5.1", features = ["byot", "rustls"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
either = { version = "1.13", features = ["serde"] }
futures = { version = "0.3" }
libc = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net", "rt"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "json"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3" }
regex = "1"

[build-dependencies]
vergen-gitcl = "1.0"
anyhow = { version = "1" }
