# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-compass"
version.workspace = true
edition.workspace = true
description = "System-level bottleneck attribution for Dynamo inference deployments"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["llm", "inference", "observability", "attribution", "bottleneck"]

[[bin]]
name = "compass"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
ordered-float.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
compass-probes = []
