# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gpu-memory-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Out-of-process GPU memory manager using CUDA VMM"

[features]
default = []
testing-cuda = []

[dependencies]
dynamo-memory = { workspace = true }
velo-transports = { workspace = true }
velo-common = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
cudarc = { workspace = true }
dashmap = { workspace = true }
libc = { version = "0.2" }
nix = { version = "0.30", features = ["fs", "socket", "uio"] }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
