[package]
name = "dynamo-identity"
version.workspace = true
edition.workspace = true
description = "Shared identity and peer types for Dynamo Nova"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
xxhash-rust = { workspace = true }

serde_bytes = "0.11"
